[gd_scene load_steps=55 format=2]

[ext_resource path="res://Assets/Sprites/Menu/Faixa2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Menu/Faixa.png" type="Texture" id=2]
[ext_resource path="res://Source/Menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Menu/Menu-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Menu/Konami.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Menu/Titulo.png" type="Texture" id=6]
[ext_resource path="res://Source/HUD/PressStart2P.ttf" type="DynamicFontData" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 126, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 252, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 378, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 504, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 630, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 756, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 882, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 1008, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 1134, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 1260, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 1386, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 1512, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 1638, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 1764, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 1890, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 2016, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 2142, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 2268, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 2394, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 2520, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 2646, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 2772, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 2898, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 3024, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 3150, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 3276, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 3402, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 3528, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 3654, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 3780, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 3906, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 4032, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 4158, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 4284, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 4410, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 4536, 0, 126, 98 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 4662, 0, 126, 98 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="StyleBoxEmpty" id=42]

[sub_resource type="StyleBoxEmpty" id=43]

[sub_resource type="StyleBoxEmpty" id=44]

[sub_resource type="StyleBoxEmpty" id=45]

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=40]
size = 40
extra_spacing_char = 1
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=41]
default_font = SubResource( 40 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 0.2 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/styles/disabled = SubResource( 42 )
Button/styles/focus = SubResource( 43 )
Button/styles/hover = SubResource( 44 )
Button/styles/normal = SubResource( 45 )
Button/styles/pressed = SubResource( 46 )

[sub_resource type="DynamicFont" id=47]
size = 40
font_data = ExtResource( 7 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Faixa1" type="Sprite" parent="."]
position = Vector2( 0, 32 )
texture = ExtResource( 1 )
centered = false

[node name="Faixa2" type="Sprite" parent="."]
position = Vector2( 0, 945 )
texture = ExtResource( 1 )
centered = false

[node name="Faixa3" type="Sprite" parent="."]
position = Vector2( 0, 1009 )
texture = ExtResource( 2 )
centered = false

[node name="Konami" type="Sprite" parent="."]
position = Vector2( 960, 150 )
scale = Vector2( 5.23, 4.2 )
texture = ExtResource( 5 )

[node name="Castlevania" type="Sprite" parent="."]
position = Vector2( 960, 380 )
scale = Vector2( 5.54785, 4.46429 )
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1638, 661 )
scale = Vector2( 3, 3 )
frames = SubResource( 39 )
frame = 8
playing = true

[node name="Start" type="Button" parent="."]
margin_left = 645.0
margin_top = 600.0
margin_right = 1330.0
margin_bottom = 654.0
theme = SubResource( 41 )
text = "PUSH START KEY"

[node name="Label" type="Label" parent="."]
margin_left = 480.0
margin_top = 800.0
margin_right = 1480.0
margin_bottom = 926.0
custom_fonts/font = SubResource( 47 )
text = "TM AND Â© 1987
KONAMI INDUSTRY CO. ,LTD.
NINTENDO OF AMERICA INC."
align = 1

[node name="TimerBlink" type="Timer" parent="."]
wait_time = 0.1

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="TimerBlink" to="." method="_on_TimerBlink_timeout"]
